--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.MainActivity">
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
@@ -15,6 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:id="@+id/my_profile"
             android:layout_width="match_parent"
@@ -29,13 +30,14 @@
                 android:text="My Profile"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#C0C0C0"
                 android:layout_marginTop="8dp"
+                android:background="#C0C0C0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
         </LinearLayout>
@@ -44,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/profile_image"
                 android:layout_width="60dp"
@@ -52,11 +55,13 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:src="@drawable/menu_profile" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
@@ -67,6 +72,7 @@
                     android:text="이름"
                     android:textSize="20sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/email"
                     android:layout_width="wrap_content"
@@ -91,13 +97,14 @@
                 android:text="My Friend"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#C0C0C0"
                 android:layout_marginTop="8dp"
+                android:background="#C0C0C0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
         </LinearLayout>
@@ -109,9 +116,9 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintStart_toStartOf="@id/search"
-            app:layout_constraintTop_toBottomOf="@+id/search"
-            app:layout_constraintTop_toTopOf="@id/search" />
+            app:layout_constraintStart_toStartOf="@id/friend"
+            app:layout_constraintTop_toBottomOf="@+id/friend"
+            app:layout_constraintTop_toTopOf="@id/friend" />
 
     </LinearLayout>
 
