--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -53,8 +53,7 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:src="@drawable/menu_profile" />
+                android:layout_marginBottom="4dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,7 +68,6 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="4dp"
-                    android:text="이름"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -78,8 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
-                    android:layout_marginTop="6dp"
-                    android:text="이메일" />
+                    android:layout_marginTop="6dp"/>
             </LinearLayout>
         </LinearLayout>
 
