--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
@@ -14,11 +12,10 @@
         android:layout_height="60dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:src="@drawable/menu_profile" />
+        android:layout_marginBottom="4dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
@@ -30,7 +27,6 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="24dp"
             android:layout_marginTop="4dp"
-            android:text="이름"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -39,7 +35,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="6dp"
-            android:text="마지막 메세지" />
+            android:layout_marginTop="6dp" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/time_stamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="6dp"
+        android:textSize="12sp"/>
 </LinearLayout>
