키보드 뷰 안가리게 하기 - adjustResize - NestedScrollView

--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -4,14 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <LinearLayout
         android:id="@+id/chatting"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
@@ -29,36 +27,42 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="560dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintStart_toStartOf="@id/chatting"
-        app:layout_constraintTop_toBottomOf="@+id/chatting"
-        app:layout_constraintTop_toTopOf="@id/chatting" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/send_msg"
-            android:layout_width="330dp"
-            android:layout_height="50dp" />
-         <ImageView
-             android:id="@+id/image_view"
-             android:layout_width="50dp"
-             android:layout_height="50dp"
-             android:layout_marginStart="10dp"
-             android:src="@drawable/menu_profile"/>
-    </LinearLayout>
-
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="560dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintStart_toStartOf="@id/chatting"
+                app:layout_constraintTop_toBottomOf="@+id/chatting"
+                app:layout_constraintTop_toTopOf="@id/chatting"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/send_msg"
+                    android:layout_width="330dp"
+                    android:layout_height="50dp" />
+                <ImageView
+                    android:id="@+id/image_view"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/menu_profile"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
