--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <androidx.recyclerview.widget.RecyclerView
@@ -53,14 +53,14 @@
                 android:orientation="horizontal">
                 <EditText
                     android:id="@+id/send_msg"
-                    android:layout_width="330dp"
-                    android:layout_height="50dp" />
-                <ImageView
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"/>
+                <Button
                     android:id="@+id/image_view"
-                    android:layout_width="50dp"
+                    android:layout_width="70dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
-                    android:src="@drawable/menu_profile"/>
+                    android:text = "전송"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
