--- a/app/src/main/res/layout/fragment_main_profile.xml
+++ b/app/src/main/res/layout/fragment_main_profile.xml
@@ -18,8 +18,7 @@
             app:layout_constraintBottom_toTopOf="@+id/edt_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/menu_profile"/>
+            app:layout_constraintTop_toTopOf="parent"/>
         <TextView
             android:id="@+id/edt_id"
             android:layout_width="wrap_content"
@@ -37,7 +36,6 @@
             android:layout_marginBottom="32dp"
             android:gravity="center"
             android:inputType="textPersonName"
-            android:text = "이은정"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/layout_btn"
