--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.FireTalk" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/talk_pink</item>
-        <item name="colorPrimaryVariant">@color/talk_pink</item>
+        <item name="colorPrimary">@color/main_talk</item>
+        <item name="colorPrimaryVariant">@color/main_talk</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
